include/ihs_wl.h

// SPDX-FileCopyrightText: 2026 Toyota Connected North America
// SPDX-License-Identifier: Apache-2.0

#ifndef IHS_WL_H_
#define IHS_WL_H_

/* Generated by cbindgen from src/lib.rs. Do not edit. */

#include <stddef.h>
#include <stdint.h>

/*
 What `ihs_wl_pointer` returns when the client hid the cursor.
 */
#define IHS_WL_CURSOR_HIDDEN 65536

/*
 Result codes. Entry points return these as `int`.
 */
enum IhsWlResult
#if defined(__cplusplus) || __STDC_VERSION__ >= 202311L
  : int32_t
#endif // defined(__cplusplus) || __STDC_VERSION__ >= 202311L
 {
  IHS_WL_RESULT_OK = 0,
  /*
   Null or malformed arguments, or a bad `struct_size`.
   */
  IHS_WL_RESULT_ERR_INVALID = -1,
  /*
   `ihs_wl_start` while running (e.g. after a hot restart). The server
   and its clients carry on; re-created views rebind to their toplevels.
   */
  IHS_WL_RESULT_ERR_ALREADY_RUNNING = -2,
  IHS_WL_RESULT_ERR_NOT_RUNNING = -3,
  /*
   Socket bind or other OS failure.
   */
  IHS_WL_RESULT_ERR_IO = -4,
  /*
   Internal failure, including a caught panic.
   */
  IHS_WL_RESULT_ERR_INTERNAL = -5,
  /*
   Not implemented in this build.
   */
  IHS_WL_RESULT_ERR_UNSUPPORTED = -6,
  /*
   The output buffer is too small.
   */
  IHS_WL_RESULT_ERR_TOO_SMALL = -7,
};
#ifndef __cplusplus
#if __STDC_VERSION__ >= 202311L
typedef enum IhsWlResult IhsWlResult;
#else
typedef int32_t IhsWlResult;
#endif // __STDC_VERSION__ >= 202311L
#endif // __cplusplus

/*
 `IhsWlPointerEvent::kind`.
 */
enum IhsWlPointerKind
#if defined(__cplusplus) || __STDC_VERSION__ >= 202311L
  : uint32_t
#endif // defined(__cplusplus) || __STDC_VERSION__ >= 202311L
 {
  IHS_WL_POINTER_KIND_ENTER = 0,
  IHS_WL_POINTER_KIND_LEAVE = 1,
  IHS_WL_POINTER_KIND_MOTION = 2,
  IHS_WL_POINTER_KIND_BUTTON = 3,
  IHS_WL_POINTER_KIND_AXIS = 4,
};
#ifndef __cplusplus
#if __STDC_VERSION__ >= 202311L
typedef enum IhsWlPointerKind IhsWlPointerKind;
#else
typedef uint32_t IhsWlPointerKind;
#endif // __STDC_VERSION__ >= 202311L
#endif // __cplusplus

/*
 `IhsWlTouchEvent::kind`.
 */
enum IhsWlTouchKind
#if defined(__cplusplus) || __STDC_VERSION__ >= 202311L
  : uint32_t
#endif // defined(__cplusplus) || __STDC_VERSION__ >= 202311L
 {
  IHS_WL_TOUCH_KIND_DOWN = 0,
  IHS_WL_TOUCH_KIND_UP = 1,
  IHS_WL_TOUCH_KIND_MOTION = 2,
  IHS_WL_TOUCH_KIND_CANCEL = 3,
  /*
   End of a batch of touch events.
   */
  IHS_WL_TOUCH_KIND_FRAME = 4,
};
#ifndef __cplusplus
#if __STDC_VERSION__ >= 202311L
typedef enum IhsWlTouchKind IhsWlTouchKind;
#else
typedef uint32_t IhsWlTouchKind;
#endif // __STDC_VERSION__ >= 202311L
#endif // __cplusplus

/*
 Start-up configuration.
 */
typedef struct IhsWlConfig {
  /*
   `sizeof(IhsWlConfig)`.
   */
  size_t struct_size;
  /*
   Socket name under `$XDG_RUNTIME_DIR`. NULL = auto: `wayland-ihs-N` when
   this process is itself a Wayland client, else `wayland-N`.
   */
  const char *socket_name;
} IhsWlConfig;

/*
 Pointer input, in view-local logical pixels.
 */
typedef struct IhsWlPointerEvent {
  size_t struct_size;
  /*
   `IhsWlPointerKind`.
   */
  uint32_t kind;
  /*
   Linux `BTN_*` code, for `Button`.
   */
  uint32_t button;
  double x;
  double y;
  /*
   1 = pressed, for `Button`.
   */
  uint32_t pressed;
  /*
   `wl_pointer.axis_source`, for `Axis`.
   */
  uint32_t axis_source;
  /*
   Scroll distance in logical px, for `Axis`.
   */
  double axis_x;
  double axis_y;
  /*
   High-resolution wheel steps (120 = one detent); 0 when not a wheel.
   */
  int32_t value120_x;
  int32_t value120_y;
  uint64_t time_us;
} IhsWlPointerEvent;

/*
 Touch input, in view-local logical pixels.
 */
typedef struct IhsWlTouchEvent {
  size_t struct_size;
  /*
   `IhsWlTouchKind`.
   */
  uint32_t kind;
  /*
   Contact id (Flutter's `PointerEvent.pointer`).
   */
  int32_t slot;
  double x;
  double y;
  uint64_t time_us;
} IhsWlTouchEvent;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/*
 Start the server: spawn the compositor thread, bind the socket and
 register the `ihs_wl/toplevel` platform-view factory. Returns once the
 socket is listening, or with the error that stopped it.

 # Safety
 `cfg` must point to a readable `IhsWlConfig` whose strings are
 NUL-terminated for the duration of the call.
 */
int ihs_wl_start(const struct IhsWlConfig *cfg);

/*
 Stop the server: unregister the factory, disconnect every client, remove
 the socket and join the compositor thread. A no-op when not running.
 */
void ihs_wl_stop(void);

/*
 The bound socket name (e.g. `wayland-ihs-0`), or NULL when not running.
 Valid until `ihs_wl_stop`.
 */
const char *ihs_wl_socket_name(void);

/*
 Issue an xdg-activation token for a client about to be launched:
 the launcher exports it as `XDG_ACTIVATION_TOKEN` and passes the same
 token in the view's creationParams. Writes a NUL-terminated token of at
 most `cap` bytes to `out`; returns its length. Waits for the server
 thread, so not from a callback the server makes.

 # Safety
 `out` must be writable for `cap` bytes.
 */
int ihs_wl_activation_token(char *out, size_t cap);

/*
 Pointer input for the view `view_id`. Any thread; only enqueues. Returns
 the cursor the client under the pointer asked for, as of the events
 handled so far: a `wp_cursor_shape_device_v1.shape` (the default, 1, for
 a cursor surface of its own), `IHS_WL_CURSOR_HIDDEN`, 0 before any
 client asked -- or a negative error.

 # Safety
 `ev` must point to a readable `IhsWlPointerEvent`.
 */
int ihs_wl_pointer(int32_t view_id, const struct IhsWlPointerEvent *ev);

/*
 Touch input for the view `view_id`. Any thread; only enqueues.

 # Safety
 `ev` must point to a readable `IhsWlTouchEvent`.
 */
int ihs_wl_touch(int32_t view_id, const struct IhsWlTouchEvent *ev);

/*
 A key press (`pressed` = 1) or release for the view `view_id`, as an evdev
 code. Any thread; only enqueues. Goes to the client only while the view
 has keyboard focus.
 */
int ihs_wl_key(int32_t view_id, uint32_t evdev, uint32_t pressed, uint64_t time_us);

/*
 Give (`focused` = 1) or take keyboard focus for the view `view_id`. Any
 thread; only enqueues. Taking it from a view that does not have it is a
 no-op.
 */
int ihs_wl_focus(int32_t view_id, uint32_t focused);

/*
 The message for the last failed call on this thread; never NULL, empty
 when there has been none. Valid until the next call on this thread.
 */
const char *ihs_wl_last_error(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* IHS_WL_H_ */